Fix 'Issues with opening folders on iOS (Safari):'

--- a/src/scss/partials/_scrollable.scss
+++ b/src/scss/partials/_scrollable.scss
@@ -147,3 +147,7 @@ div.scrollable:hover::-webkit-scrollbar-thumb {
 ::-webkit-scrollbar-corner {
   background-color: transparent;
 }
+
+div.scrollable-x::-webkit-scrollbar {
+  display: none; // for safari iOS
+}
